# quarantadue

./: .gitignore  README.md
ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_utils1.c  ft_printf_utils2.c  ft_putnbr_base.c
ft_printf/libft/: ft_alloc.c  ft_lst_iter.c
libft/: Makefile  ft_convert.c  ft_memory_1.c  ft_put_fd.c  ft_strmap.c  pseudo
milestone_0/: READM.me
milestone_0/libft/: Makefile  ft_char_2.c  ft_join_trim.c  ft_lst_clear.c  ft_lst_utils.c  ft_string_2.c
milestone_1/born2beroot/: README.md  signature.txt
milestone_1/ft_printf/: README.md  ft_printf.c  ft_printf.h  ft_printf_utils2.c  ft_uitoa.c
milestone_1/ft_printf/libft/: ft_char_1.c  ft_lst_new.c  ft_memory_2.c  ft_split.c  ft_string_1.c  ft_substr.c  libft.h
milestone_1/get_next_line/: README.md  TCC.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c
milestone_2/amazeing/: Makefile  README.md  a_maze_ing.py  config.txt  generator.py  maze.txt  maze_parser.py  mazegen-1.0.0-py3-none-any.whl  mazegen.py  pyproject.toml  requirements.txt  solver.py  splash.py  user.py  visual.py
milestone_2/amazeing-main/: .gitignore  Makefile  a_maze_ing.py  config.txt  generator.py  parser.py  visualizer.py
milestone_2/amazeing-main/tests/: test_maze.py
milestone_2/push_swap/: Makefile  README.md  cost.c  index.c  push.c  push_swap  push_swap.c  push_swap.h  push_swap_utils1.c  reverse_rotate.c  rotate.c  small_sort.c  swap.c  turk_sort.c  turk_utils.c
milestone_2/push_swap/libft/: ft_convert.c  ft_isdigit.c  libft.h
milestone_2/python00/ex01/: ft_plot_area.py
milestone_2/python00/ex02/: ft_harvest_total.py
milestone_2/python00/ex03/: ft_plant_age.py
milestone_2/python00/ex04/: ft_water_reminder.py
milestone_2/python00/ex05/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
milestone_2/python00/ex06/: ft_garden_summary.py
milestone_2/python00/ex07/: ft_seed_inventory.py
milestone_2/python01/ex00/: ft_garden_intro.py
milestone_2/python02/: CLAUDE.md
milestone_2/python03/: CLAUDE.md
milestone_2/python04/: .gitignore
milestone_2/python06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
milestone_2/python07/: battle.py  capacitor.py  tournament.py
milestone_2/python08/ex1/: loading.py  pyproject.toml  requirements.txt
milestone_3/: PLAN.md
milestone_3/call me maybe/: .flake8  .gitignore  CODE_REVIEW_REPORT.md  DEBUG_TEST_PLAN.md  Makefile  README.md  pyproject.toml  test_report.md
milestone_3/call me maybe/src/: __init__.py  __main__.py  decoder.py  loader.py  model.py  schemas.py
milestone_3/codexion/: .gitignore  CODE_REVIEW.md  DEBUG_TEST_PLAN.md  Makefile  README.md  edge_cases.txt  test.sh
milestone_3/fly-in/: .gitignore  DEBUG_TEST_PLAN.md  Makefile  README.md  TEST_REPORT.md  edge_cases.txt  pyproject.toml
milestone_3/fly-in/data/maps/: easy_01.map  easy_02.map  easy_03.map  hard_01.map  hard_02.map  medium_01.map  medium_02.map  medium_03.map
milestone_3/fly-in/src/: __init__.py  __main__.py  graph.py  parser.py  pathfinding.py  schemas.py  simulation.py  visual.py
(+82 files in other folders)
