[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A standalone maze generator module."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "tcostant" },
    { name = "acentron" },
]
dependencies = []

[tool.setuptools]
py-modules = ["mazegen"]
