[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Constrained-decoding function calling on Qwen3-0.6B."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=1.26",
    "pydantic>=2.7",
    # torch is never imported by src/: it is required by the provided
    # llm_sdk. It is declared here only so [tool.uv.sources] can pin the
    # CPU wheel index (uv sources apply to direct dependencies only).
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0",
    "mypy>=1.10",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["llm_sdk/", ".venv/"]
